# commonroad-control

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  closed_planning_control_loop_example.py  example.py  mkdocs.yml  mpc_example.py  pid_example.py  pid_long_lat.py  pid_long_lat_example.py  pid_with_lookahead.py  pyproject.toml  rp_test.py  test.py
commonroad_control/: reservation.py  run.py  run_Elchtest.py
commonroad_control/control/: control.py  controller.py  controller_to_vehicle_interface.py  reference_trajectory_factory.py
commonroad_control/cr_control_easy_api/: default_building_blocks.py  mpc_for_dedicated_planner.py  pid_for_dedicated_planner.py
commonroad_control/models/: constrained_integrator.py
commonroad_control/noise_disturbance/: GaussianNDGenerator.py  NoiseDisturbanceGeneratorInterface.py
commonroad_control/optimal_control/: ocp_solver.py  (+2 more)
constrainedIntegrator/: constrainedIntegrator_probdef.py  constrainedIntegrator_run.py
docs/: index.md
optimalControl/: ocp_dataclasses.py  solverOptimalControl.py  utils.py
scenarios/: C-DEU_B471-2_1.xml  DEU_Salzwedel-107_1_T-7.xml  ITA_Foggia-6_1_T-1.xml  ZAM_Over-1_1.xml  ZAM_Tjunction-1_42_T-1.xml  ZAM_Tutorial_Urban-3_2.xml
test/: test_closed_planning_control_loop.py  test_cr_control_easy_api.py  test_dummy.py  test_example.py  test_idm_planner.py  test_model_instantiation.py  test_mpc_easy_api.py  test_mpc_main_script.py  test_noise_disturbances.py  test_pid_easy_api.py  test_pid_long_lat.py  test_pid_with_lookahead_example.py  test_reactp_converter.py  test_vehicle_models.py
(+163 files in other folders)
